<package format="2">
    <name>nav_utils</name>
    <version>1.0.0</version>
    <description>
        Navigation utilities, odometry and tf processing etc.
    </description>
    <maintainer email="tpetricek@gmail.com">Tomas Petricek</maintainer>
    <license>MIT</license>

    <url>https://github.com/tpet/nav_utils</url>
    <author>Tomas Petricek</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>nodelet</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_ros</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_client</depend>
    <depend>tf2_eigen</depend>
    <depend>tf2_ros</depend>
    <depend>topic_tools</depend>

    <export>
        <nodelet plugin="${prefix}/nav_utils_plugins.xml" />
    </export>
</package>

